@@ -35,6 +35,11 @@ execution depending on the relative age of the specified files.</p>
     <td valign="top" align="center">Yes</td>
   </tr>
   <tr>
+    <td valign="top">value</td>
+    <td valign="top">the value to set the property to. Defaults to &quot;true&quot;.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
+  <tr>
     <td valign="top">targetfile</td>
     <td valign="top">the file for which we want to determine the status.</td>
     <td valign="top" align="center">Yes, unless a nested mapper element is 
